2005-11-12  topf  <topf@cvs.berlios.de>

	* ChangeLog, SlackBuild, doinst.sh, footprint, md5sums, requires, slack-desc, sources:
	Moved to gnome/.
