@@ -1,0 +1,168 @@
+drwxr-xr-x  root/root  ./
+drwxr-xr-x  root/root  etc/
+drwxr-xr-x  root/root  etc/gconf/
+drwxr-xr-x  root/root  etc/gconf/schemas/
+-rw-r--r--  root/root  etc/gconf/schemas/deskbar-applet.schemas
+drwxr-xr-x  root/root  install/
+-rw-r--r--  root/root  install/doinst.sh
+-rw-r--r--  root/root  install/slack-desc
+drwxr-xr-x  root/root  usr/
+drwxr-xr-x  root/root  usr/doc/
+drwxr-xr-x  root/root  usr/doc/deskbar-applet-0.8.4/
+-rw-r--r--  root/root  usr/doc/deskbar-applet-0.8.4/AUTHORS
+-rw-r--r--  root/root  usr/doc/deskbar-applet-0.8.4/COPYING
+-rw-r--r--  root/root  usr/doc/deskbar-applet-0.8.4/ChangeLog
+-rw-r--r--  root/root  usr/doc/deskbar-applet-0.8.4/INSTALL
+-rw-r--r--  root/root  usr/doc/deskbar-applet-0.8.4/NEWS
+-rw-r--r--  root/root  usr/doc/deskbar-applet-0.8.4/README
+-rw-r--r--  root/root  usr/doc/deskbar-applet-0.8.4/TODO
+drwxr-xr-x  root/root  usr/lib/
+drwxr-xr-x  root/root  usr/lib/bonobo/
+drwxr-xr-x  root/root  usr/lib/bonobo/servers/
+-rw-r--r--  root/root  usr/lib/bonobo/servers/Deskbar_Applet.server
+drwxr-xr-x  root/root  usr/lib/deskbar-applet/
+-rwxr-xr-x  root/root  usr/lib/deskbar-applet/deskbar-applet
+drwxr-xr-x  root/root  usr/lib/deskbar-applet/handlers/
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/beagle.py
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/beagle.pyc
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/beagle.pyo
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/directories.py
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/directories.pyc
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/directories.pyo
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/email_address.py
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/email_address.pyc
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/email_address.pyo
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/epiphany.py
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/epiphany.pyc
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/epiphany.pyo
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/files.py
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/files.pyc
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/files.pyo
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/galago.py
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/galago.pyc
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/galago.pyo
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/galeon.py
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/galeon.pyc
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/galeon.pyo
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/google-live-help.txt
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/google-live.py
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/google-live.pyc
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/google-live.pyo
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/gtkbookmarks.py
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/gtkbookmarks.pyc
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/gtkbookmarks.pyo
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/mozilla.py
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/mozilla.pyc
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/mozilla.pyo
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/pathprograms.py
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/pathprograms.pyc
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/pathprograms.pyo
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/programs.py
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/programs.pyc
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/programs.pyo
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/volumes.py
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/volumes.pyc
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/volumes.pyo
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/web_address.py
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/web_address.pyc
+-rw-r--r--  root/root  usr/lib/deskbar-applet/handlers/web_address.pyo
+drwxr-xr-x  root/root  usr/lib/pkgconfig/
+-rw-r--r--  root/root  usr/lib/pkgconfig/deskbar-applet.pc
+drwxr-xr-x  root/root  usr/lib/python2.4/
+drwxr-xr-x  root/root  usr/lib/python2.4/site-packages/
+drwxr-xr-x  root/root  usr/lib/python2.4/site-packages/deskbar/
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/__init__.py
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/__init__.pyc
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/__init__.pyo
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/about.py
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/about.pyc
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/about.pyo
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/applet.py
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/applet.pyc
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/applet.pyo
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/applet_keybinder.py
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/applet_keybinder.pyc
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/applet_keybinder.pyo
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/defs.py
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/defs.pyc
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/defs.pyo
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/deskbarentry.py
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/deskbarentry.pyc
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/deskbarentry.pyo
+drwxr-xr-x  root/root  usr/lib/python2.4/site-packages/deskbar/evolution/
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/evolution/__init__.py
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/evolution/__init__.pyc
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/evolution/__init__.pyo
+-rwxr-xr-x  root/root  usr/lib/python2.4/site-packages/deskbar/evolution/_evolution.la
+-rwxr-xr-x  root/root  usr/lib/python2.4/site-packages/deskbar/evolution/_evolution.so
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/filewatcher.py
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/filewatcher.pyc
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/filewatcher.pyo
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/handler.py
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/handler.pyc
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/handler.pyo
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/handler_utils.py
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/handler_utils.pyc
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/handler_utils.pyo
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/handlers_browsers.py
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/handlers_browsers.pyc
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/handlers_browsers.pyo
+drwxr-xr-x  root/root  usr/lib/python2.4/site-packages/deskbar/iconentry/
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/iconentry/__init__.py
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/iconentry/__init__.pyc
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/iconentry/__init__.pyo
+-rwxr-xr-x  root/root  usr/lib/python2.4/site-packages/deskbar/iconentry/_iconentry.la
+-rwxr-xr-x  root/root  usr/lib/python2.4/site-packages/deskbar/iconentry/_iconentry.so
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/indexer.py
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/indexer.pyc
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/indexer.pyo
+drwxr-xr-x  root/root  usr/lib/python2.4/site-packages/deskbar/keybinder/
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/keybinder/__init__.py
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/keybinder/__init__.pyc
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/keybinder/__init__.pyo
+-rwxr-xr-x  root/root  usr/lib/python2.4/site-packages/deskbar/keybinder/_keybinder.la
+-rwxr-xr-x  root/root  usr/lib/python2.4/site-packages/deskbar/keybinder/_keybinder.so
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/locale_utils.py
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/locale_utils.pyc
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/locale_utils.pyo
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/ltihooks.py
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/ltihooks.pyc
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/ltihooks.pyo
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/module_list.py
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/module_list.pyc
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/module_list.pyo
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/preferences.py
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/preferences.pyc
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/preferences.pyo
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/tokenizer.py
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/tokenizer.pyc
+-rw-r--r--  root/root  usr/lib/python2.4/site-packages/deskbar/tokenizer.pyo
+drwxr-xr-x  root/root  usr/share/
+drwxr-xr-x  root/root  usr/share/deskbar-applet/
+-rw-r--r--  root/root  usr/share/deskbar-applet/Deskbar_Applet.xml
+drwxr-xr-x  root/root  usr/share/deskbar-applet/art/
+-rw-r--r--  root/root  usr/share/deskbar-applet/art/deskbar-applet-small.png
+-rw-r--r--  root/root  usr/share/deskbar-applet/art/deskbar-applet.png
+-rw-r--r--  root/root  usr/share/deskbar-applet/art/folder-bookmark.png
+-rw-r--r--  root/root  usr/share/deskbar-applet/art/generic.png
+-rw-r--r--  root/root  usr/share/deskbar-applet/art/google.png
+-rw-r--r--  root/root  usr/share/deskbar-applet/art/web-bookmark.png
+-rw-r--r--  root/root  usr/share/deskbar-applet/prefs-dialog.glade
+drwxr-xr-x  root/root  usr/share/locale/
+drwxr-xr-x  root/root  usr/share/locale/en_GB/
+drwxr-xr-x  root/root  usr/share/locale/en_GB/LC_MESSAGES/
+-rw-r--r--  root/root  usr/share/locale/en_GB/LC_MESSAGES/deskbar-applet.mo
+drwxr-xr-x  root/root  usr/share/locale/fi/
+drwxr-xr-x  root/root  usr/share/locale/fi/LC_MESSAGES/
+-rw-r--r--  root/root  usr/share/locale/fi/LC_MESSAGES/deskbar-applet.mo
+drwxr-xr-x  root/root  usr/share/locale/ja/
+drwxr-xr-x  root/root  usr/share/locale/ja/LC_MESSAGES/
+-rw-r--r--  root/root  usr/share/locale/ja/LC_MESSAGES/deskbar-applet.mo
+drwxr-xr-x  root/root  usr/share/locale/nl/
+drwxr-xr-x  root/root  usr/share/locale/nl/LC_MESSAGES/
+-rw-r--r--  root/root  usr/share/locale/nl/LC_MESSAGES/deskbar-applet.mo
+drwxr-xr-x  root/root  usr/share/locale/zh_CN/
+drwxr-xr-x  root/root  usr/share/locale/zh_CN/LC_MESSAGES/
+-rw-r--r--  root/root  usr/share/locale/zh_CN/LC_MESSAGES/deskbar-applet.mo
+drwxr-xr-x  root/root  usr/share/pixmaps/
+-rw-r--r--  root/root  usr/share/pixmaps/deskbar-applet.png
