@@ -1,0 +1,3 @@
+590ac908dd8890aef9492aabf0a0c78a  deskbar-applet-0.8.4.tar.gz
+762dde3a98bb98907532e501520fae59  deskbar-applet-0.8.2.tar.gz
+ddfae0e1b4e54947e96fe2ac31526882  deskbar-applet-0.5.0.tar.gz
