@@ -1,0 +1,19 @@
+# optional: coreutils
+# optional: evolution-data-server
+# optional: gconf
+# optional: glibc
+# optional: gnome-vfs
+# optional: libbonobo
+# optional: libgnome
+# optional: libxml2
+# optional: orbit2
+# optional: popt
+# optional: zlib
+atk
+cairo
+glib2
+gtk+2
+pango
+python
+x11
+x11-devel
