@@ -1,0 +1,11 @@
+deskbar-applet: search-engines query applet
+deskbar-applet:
+deskbar-applet: This is a Gnome applet to allow easy access to various
+deskbar-applet: search engines (like Google's Deskbar for Windows).
+deskbar-applet: 
+deskbar-applet: This applet looks like the current Gnome Mini-Commander,
+deskbar-applet: but it launches search queries instead of programs.
+deskbar-applet:
+deskbar-applet:
+deskbar-applet:
+deskbar-applet:
