@@ -1,0 +1,2 @@
+http://dl.sourceforge.net/browserbookapp/$NAME-$VERSION.tar.gz
+#http://raphael.slinckx.net/files/$NAME-$VERSION.tar.gz
