@@ -1,5 +1,12 @@
 2005-11-12  topf  <topf@cvs.berlios.de>
 
-	* ChangeLog, SlackBuild, doinst.sh, footprint, md5sums, requires, slack-desc, sources:
-	Moved to gnome/.
+	* ChangeLog: version update
+
+	* footprint, info, md5sums, requires, sources, SlackBuild:
+	version update (lem)
+
+2005-11-01  topf  <topf@cvs.berlios.de>
+
+	* SlackBuild, doinst.sh, footprint, info, md5sums, requires, slack-desc, sources:
+	version bump (lem)
 
